--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "bootstrap": "4.3.1",
+    "history": "^4.10.1",
     "immer": "2.1.3",
     "prop-types": "15.7.2",
     "react": "16.8.4",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
+    "@testing-library/react": "^10.0.1",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-preset-react-app": "7.0.2",
