--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "4.3.1",
     "history": "^4.10.1",
     "immer": "2.1.3",
+    "moment": "^2.24.0",
     "prop-types": "15.7.2",
     "react": "16.8.4",
     "react-bootstrap": "^1.0.0",
