--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "bootstrap": "4.3.1",
+    "fetch-ponyfill": "^6.1.0",
     "history": "^4.10.1",
     "immer": "2.1.3",
     "moment": "^2.24.0",
