--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "history": "^4.10.1",
     "html-webpack-plugin": "3.2.0",
     "http-server": "0.9.0",
-    "jest": "24.5.0",
+    "jest": "^25.2.4",
     "json-server": "0.14.2",
     "mini-css-extract-plugin": "0.5.0",
     "node-fetch": "^2.3.0",
