--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "4.3.1",
     "history": "^4.10.1",
     "immer": "2.1.3",
